<resources>
    <string name="app_name">wbudyProjekt</string>
    <string name="start_string">Start</string>
    <string name="kompas">Kompas</string>
    <string name="krokomierz">Krokomierz</string>
    <string name="dystans">Dystans</string>
    <string name="steps_hint">0 kroków</string>
    <string name="distans_hint">0 m</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Resetuj</string>
    <string name="proximity">Odległość</string>
    <string name="magnetic_detector">Magnes detektor</string>
    <string name="magnetic_detected">Magnes wykryto w pobliżu</string>
    <string name="magnetic_not_detected">Magnes NIE wykryto w pobliżu</string>
    <string name="shaker">Shaker</string>
    <string name="shake_me">Wstrząsnij mnie!</string>
    <string name="wlacz_latarke">Zbliż telefon do policzka by wlaczyc latarke</string>
    <string name="wylacz_latarke">Zbliż telefon do policzka by wylaczyc latarke</string>
    <string name="latarka">Latarka</string>
</resources>
